added abit of css to search bar

--- a/Blueprint/onboarding.css
+++ b/Blueprint/onboarding.css
@@ -72,6 +72,7 @@ body {
 
   .search-box{  
     background-position-x: center;
+    /* position: absolute; */
    top: 50%;
    left: 50%;
    /* transform: translate(-50%, -50%); */
@@ -79,4 +80,30 @@ body {
    height: 40px;
    border-radius:40px;
    padding: 10px;
+  }
+
+  .search-btn{
+    color: #e84118;
+    float: right;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #2f3640;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -10px;
+  }
+
+  .search-txt{
+    border:none;
+    background: none;
+    outline: none;
+    float: left;
+    padding: 0;
+    color: white;
+    font-size: 16px;
+    transition: 0.4s;
+    line-height: 40px;
+    margin-top: -10px;
   }
