--- a/Blueprint/onboarding.css
+++ b/Blueprint/onboarding.css
@@ -1,106 +1,137 @@
 body {
     margin: 0;
     width: 370px;
-    height: 300px;
-    border: 10px solid springgreen;
+    height: 280px;
+    border: 10px solid lightgreen;
     overflow: hidden;
     user-select: none;
     -moz-user-select: none;
     -khtml-user-select: none;
     -webkit-user-select: none;
     -o-user-select: none;
-  }
-  
-  .garage-logo {
+}
+
+.garage-logo {
     position: absolute;
     left: 20px;
     top: 20px;
     width: 100px;
     height: auto;
-  }
+}
 
-  .slider {
+.slider {
     width: 300%;
     padding: 80px 0;
     transition: margin-left 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-  .slide {
+}
+
+.slide {
     float: left;
     width: 33.3333333333%;
     text-align: center;
-  }  
+}
 
-  .slide h1{
+.slide h1 {
     font-size: 30px;
-    font-family: "Bodoni MT", serif;
+    font-family: "Arial", sans-serif;
     font-weight: bold;
-  }
+}
 
-  .slide p {
+.slide h3 {
+    font-size: 18px;
+    font-family: "Arial", sans-serif;
+    font-weight: bold;
+}
+
+.slide p {
     line-height: 1.4em;
     font-size: 13px;
     width: 270px;
     margin: 0 auto;
-    color: #848484;
-  }
+    /* color: #848484;  */
+    font-family: "Arial", sans-serif;
+}
 
-  .footer {
+.slide .column {
+    float: left;
+    padding: 10px;
+}
+
+.slide .left {
+    width: 50%
+}
+
+.slide .right {
+    width: 50%;
+}
+
+img {
+    width: 100px;
+    height: 100px;
+}
+
+#guide-text {
+    text-align: left;
+    margin-top: -20px;
+}
+
+.footer {
     display: flex;
     justify-content: space-between;
     position: absolute;
     width: 100%;
     bottom: 5px;
-  }
+}
 
-  .dots {
+.dots {
     padding: 3px 3px 3px 18px;
-  }
+}
 
-  .dot {
+.dot {
     height: 8px;
     width: 8px;
     border: 1px solid black;
     border-radius: 50%;
     display: inline-block;
     margin-right: 1px;
-  }
+}
 
-  .dot.fill {
+.dot.fill {
     background-color: black;
-  }
+}
 
-  #previous-circle {
+#previous-circle {
     cursor: pointer;
     position: relative;
     padding: 3px;
     /* top: -5px; */
-  }
+}
 
-  .arrow {
+.arrow {
     padding-right: 15px;
     text-align: right;
-  }
+}
 
-  #next-circle {
+#next-circle {
     cursor: pointer;
     position: relative;
     padding: 3px;
     /* top: -5px; */
-  }
+}
 
-  .search-box{  
+.search-box {
     background-position-x: center;
     /* position: absolute; */
-   top: 50%;
-   left: 50%;
-   /* transform: translate(-50%, -50%); */
-   background: #2f3640;
-   height: 40px;
-   border-radius:40px;
-   padding: 10px;
-  }
+    top: 50%;
+    left: 50%;
+    /* transform: translate(-50%, -50%); */
+    background: #2f3640;
+    height: 40px;
+    border-radius: 40px;
+    padding: 10px;
+}
 
-  .search-btn{
+.search-btn {
     color: #e84118;
     float: right;
     width: 40px;
@@ -111,10 +142,10 @@ body {
     justify-content: center;
     align-items: center;
     margin-top: -10px;
-  }
+}
 
-  .search-txt{
-    border:none;
+.search-txt {
+    border: none;
     background: none;
     outline: none;
     float: left;
@@ -124,4 +155,4 @@ body {
     transition: 0.4s;
     line-height: 40px;
     margin-top: -10px;
-  }
+}
