--- a/Blueprint/home.css
+++ b/Blueprint/home.css
@@ -17,7 +17,7 @@
 }
 
 .section{
-    margin: 90px 40px 20px;
+    margin: 65px 40px 20px;
     width: 100%;
 }
 .section .button{
@@ -36,6 +36,48 @@
 	text-decoration:none;
 	text-shadow:0px 1px 0px #e1e2ed; 
 }
-#search{
-    background:linear-gradient(to bottom, #bab1ba 50%, #ededed 100%);
+.section .button:hover {
+	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
+	background-color:#bab1ba;
+}
+.search-box{
+    position: absolute;
+    top: 150px;
+    left: 45px;
+    background: #2f3640;
+    height: 40px;
+    border-radius: 40px;
+    padding: 10px;
+}
+.search-box:hover>.search-txt{
+    width: 200px;
+    padding: 0 6px;
+}
+.search-box:hover>.search-btn{
+    background: white;
+}
+.search-btn{
+    color: #e84118;
+    float: right;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #2f3640;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search-txt{
+
+    border: none;
+    background: none;
+    outline: none;
+    float: left;
+    padding:0;
+    color: white;
+    font-size: 16px;
+    transition: .4s;
+    line-height: 40px;
+    width: 0px;
 }
