--- a/Blueprint/home.css
+++ b/Blueprint/home.css
@@ -17,72 +17,101 @@
 }
 
 .section{
-    margin: 65px 40px 20px;
-    width: 100%;
-}
+    table-layout: fixed;
+    border-collapse: collapse;
+    width: 90%;
+    margin: 10px;
+    margin-top: 70px;
+} 
+
 .section .button{
-    box-shadow: 3px 4px 0px 0px #899599;
-	background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
-	background-color:#ededed;
-	border-radius:15px;
-	border:1px solid #d6bcd6;
-	display:inline-block;
-	cursor:pointer;
-	color:#3a8a9e;
-	font-family:Arial;
-    font-size:15px;
-    padding:7px 5px;
-    margin-right: 5px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #e1e2ed; 
-}
-.section .button:hover {
-	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
-	background-color:#bab1ba;
-}
-.search-box{
-    position: absolute;
-    top: 150px;
-    left: 45px;
-    background: #2f3640;
-    height: 40px;
-    border-radius: 40px;
-    padding: 10px;
-}
-.search-box:hover>.search-txt{
-    width: 200px;
-    padding: 0 6px;
-}
-.search-box:hover>.search-btn{
-    background: white;
-}
-.search-btn{
-    color: #e84118;
-    float: right;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: #2f3640;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.search-txt{
-
-    border: none;
-    background: none;
-    outline: none;
-    float: left;
-    padding:0;
+    background-color: #C8C8C8; 
     color: white;
-    font-size: 16px;
-    transition: .4s;
-    line-height: 40px;
-    width: 0px;
+    font-size: 15px;
+    text-align: center;
+    line-height: 30px;
+    border-radius: 8px;
+    float: left;
+    width: 100%;
+    height: 30px;
+}
+#search{
+    background-color: #828282	;
 }
 
-.defination{
-    margin-top: 50px;
-    overflow: auto;
+
+
+.search-box{
+    background-color: #44D795;
+    width: 300px;
+    padding: 10px;
+    height: 150px;
+    margin: 10px;
+    border-radius: 15px;
 }
+
+.search-box h2{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: white;
+    font-size: 15px;
+}
+
+.search-box .search-txt{
+    padding: 10px;
+    font-size: 15px;
+    border: 1px solid grey;
+    float: left;
+    width: 90%;
+    background: white;
+    border-radius: 10px;
+}
+
+.search-box .search-btn{
+    position: absolute;
+    left:270px;
+    top: 178px;
+
+}
+
+.tab-container{
+    width: 90%;
+    margin: 10px;
+    height:200px;
+}
+
+.tab-container .button-container{
+    height: 15%;
+   
+}
+
+.tab-container .button-container button{
+    width: 50%;
+    height: 100%;
+    color: white;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 11px;
+    background-color: lightgreen;
+}
+
+.tab-container .button-container button:hover{
+    background-color: darkgreen;
+}
+
+.tab-container .tab-panel{
+    height: 90%;
+    background-color:#44D795 ;
+    color: black;
+    text-align: center;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+    display: none;
+}
+
