--- a/Blueprint/home.css
+++ b/Blueprint/home.css
@@ -97,17 +97,17 @@
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 11px;
-    background-color: lightgreen;
+    background-color: lightgrey;
 }
 
 .tab-container .button-container button:hover{
-    background-color: darkgreen;
+    background-color: darkgrey;
 }
 
 .tab-container .tab-panel{
     height: 90%;
-    background-color:#44D795 ;
-    color: black;
+    background-color: lightgrey ;
+    color: white;
     text-align: center;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
