--- a/Blueprint/relatedNews.css
+++ b/Blueprint/relatedNews.css
@@ -85,6 +85,17 @@
   }
 
   .tile {
-    padding: 8px 0;
+    padding: 8px ;
+  }
+
+  .content img {
+    width: 100%;
+    display: block;
+  }
+
+  .content .lead-small {
+    font-size: 11px;
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
   }
   
