--- a/Blueprint/checklist.css
+++ b/Blueprint/checklist.css
@@ -45,11 +45,11 @@
     width: 100%;
     margin-top: 10px;
     border-radius: 10px;
-    height: 50px;
+    height: 60px;
   }
 
 
-  input[type=checkbox] + label{
+  /* input[type=checkbox] + label{
       display: block;
   }
 
@@ -76,7 +76,7 @@ input[type=checkbox]:checked + label:before{
     background-color: mediumseagreen;    
     border-color: mediumseagreen;
     color:#fff;
-}
+}*/
 
 .search-box .item #checklist-delete{
     position: absolute;
@@ -84,4 +84,4 @@ input[type=checkbox]:checked + label:before{
     height: 10px;
     top: 10px;
     right: 10px;
-}
+} 
