--- a/Blueprint/home.css
+++ b/Blueprint/home.css
@@ -25,8 +25,8 @@
 } 
 
 .section .button{
-    background-color: #C8C8C8; 
-    color: white;
+    background-color:black; 
+    color: black;
     font-size: 15px;
     text-align: center;
     line-height: 30px;
@@ -35,8 +35,13 @@
     width: 100%;
     height: 30px;
 }
+
+.section .button .menu_image{
+    width: 30px;
+    height: 30px;
+}
 #search{
-    background-color: #828282	;
+    background-color: #2F4F4F;
 }
 
 
