--- a/Blueprint/relatedNews.css
+++ b/Blueprint/relatedNews.css
@@ -15,7 +15,7 @@
 } 
 
 .section .button{
-    background-color: #C8C8C8; 
+    background-color: black; 
     color: white;
     font-size: 15px;
     text-align: center;
@@ -25,9 +25,13 @@
     width: 100%;
     height: 30px;
 }
+.section .button .menu_image{
+  width: 30px;
+  height: 30px;
+}
 
 #related-news{
-    background-color: #828282	;
+    background-color: #2F4F4F	;
 }
 
 .search-box{
