--- a/Blueprint/checklist.css
+++ b/Blueprint/checklist.css
@@ -94,3 +94,37 @@ input[type=checkbox]:checked + label:before{
     top: 10px;
     right: 10px;
 } 
+
+.search-box .item .dropbtn{
+    position: absolute;
+    /* width: 10px; */
+    height: 20px; 
+    bottom: 10px;
+    right: 10px;
+} 
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
