--- a/Blueprint/checklist.css
+++ b/Blueprint/checklist.css
@@ -109,9 +109,9 @@ input[type=checkbox]:checked + label:before{
   
   .dropdown-content {
     display: none;
-    position: absolute;
+    position: relative;
     background-color: #f1f1f1;
-    min-width: 160px;
+    /* min-width: 160px; */
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -119,7 +119,7 @@ input[type=checkbox]:checked + label:before{
 
   .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    /* padding: 12px 16px; */
     text-decoration: none;
     display: block;
   }
