--- a/Blueprint/checklist.css
+++ b/Blueprint/checklist.css
@@ -40,7 +40,7 @@
     background-color: #44D795;
     width: 310px;
     padding: 10px;
-    height: 410px;
+    height: 300px;
     margin: 10px;
     border-radius: 15px;
     overflow: auto;
@@ -128,3 +128,101 @@ input[type=checkbox]:checked + label:before{
 .dropdown a:hover {background-color: #ddd;}
 
 .show {display: block;}
+
+
+/* Slideshow container */
+
+.category-box{
+    position: relative;
+    border-radius: 8px;
+    background: #44D795;
+    width: 93%;
+    margin: 10px;
+    height: 130px;
+}
+.add{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: large;
+}
+  /* Slides */
+  .category-cell {
+    display: none;
+    position: relative;
+    top: 30px;
+    left: 5px;
+
+  }
+
+  .category-cell td{
+    background-color:white;
+    padding:5px;
+    margin: 10px;
+    float: left;
+    border-radius: 10px;
+    height: 20px;
+    width: 70px;
+    font-size: large;
+    text-align: center;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    bottom: 5px;
+    width: auto;
+    /* margin-top: -30px; */
+    padding: 10px;
+    color: #888;
+    font-weight: bold;
+    font-size: 10px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    position: absolute;
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: green;
+    color: white;
+  }
+  
+  /* The dot/bullet/indicator container */
+  .dot-container {
+    position: absolute;
+    text-align: center;
+    background:#44D795;
+    bottom: 0;
+    left: 43%;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 10px;
+    width: 10px;
+    margin: 0 2px;
+    background-color: darkgrey;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  /* Add a background color to the active dot/circle */
+  .active, .dot:hover {
+    background-color: black;
+  }
+  
+  /* Add an italic font style to all quotes */
+  q {font-style: italic;}
+  
+  /* Add a blue color to the author */
+  .author {color: cornflowerblue;}
