--- a/Blueprint/checklist.css
+++ b/Blueprint/checklist.css
@@ -1,64 +1,62 @@
 .garage-logo {
-    position: absolute;
-    left: 20px;
-    top: 20px;
-    width: 100px;
-    height: auto;
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  width: 100px;
+  height: auto;
 }
 
-.section{
-    table-layout: fixed;
-    border-collapse: collapse;
-    width: 93%;
-    margin: 10px;
-    margin-top: 70px;
-} 
-
-.section .button{
-    background-color: black; 
-    color: white;
-    font-size: 15px;
-    text-align: center;
-    line-height: 30px;
-    border-radius: 8px;
-    float: left;
-    width: 100%;
-    height: 30px;
+.section {
+  table-layout: fixed;
+  border-collapse: collapse;
+  width: 93%;
+  margin: 10px;
+  margin-top: 70px;
 }
 
-.section .button .menu_image{
-    width: 30px;
-    height: 30px;
+.section .button {
+  background-color: black;
+  color: white;
+  font-size: 15px;
+  text-align: center;
+  line-height: 30px;
+  border-radius: 8px;
+  float: left;
+  width: 100%;
+  height: 30px;
 }
 
-#checklist{
-    background-color: #2F4F4F;
+.section .button .menu_image {
+  width: 30px;
+  height: 30px;
 }
 
+#checklist {
+  background-color: #2F4F4F;
+}
 
-.search-box{
-    background-color: #44D795;
-    width: 310px;
-    padding: 10px;
-    height: 300px;
-    margin: 10px;
-    border-radius: 15px;
-    overflow: auto;
+.search-box {
+  background-color: #44D795;
+  width: 310px;
+  padding: 10px;
+  height: 350px;
+  margin: 10px;
+  border-radius: 15px;
+  overflow: auto;
 }
 
 .item {
-    position: relative;
-    background-color:white;
-    padding: 10px;
-    float: left;
-    width: 100%;
-    margin-top: 10px;
-    border-radius: 10px;
-    height: 60px;
-  }
+  position: relative;
+  background-color: white;
+  padding: 10px;
+  float: left;
+  width: 100%;
+  margin-top: 10px;
+  border-radius: 10px;
+  height: 60px;
+}
 
-
-  /* input[type=checkbox] + label{
+/* input[type=checkbox] + label{
       display: block;
   }
 
@@ -87,174 +85,196 @@ input[type=checkbox]:checked + label:before{
     color:#fff;
 }*/
 
-.search-box .item #checklist-delete{
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    top: 10px;
-    right: 10px;
-} 
+.search-box .item #checklist-delete {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 3px;
+  right: 10px;
+}
 
-.search-box .item .dropbtn{
-    position: absolute;
-    /* width: 10px; */
-    height: 20px; 
-    bottom: 10px;
-    right: 10px;
-} 
+.search-box .item .dropbtn {
+  position: absolute;
+  background-color: white;
+  border:none;
+  /* width: 10px; */
+  /* height: 20px; */
+  height: 20px;
+  bottom: 3px;
+  right: 10px;
+}
 
 .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: relative;
-    background-color: #f1f1f1;
-    /* min-width: 160px; */
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
+  background-color: lightgrey;
+}
 
-  .dropdown-content a {
-    color: black;
-    /* padding: 12px 16px; */
-    text-decoration: none;
-    display: block;
-  }
-  
+.dropdown-content {
+  display: none;
+  position: relative;
+  background-color: white;
+  /* min-width: 160px; */
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
 
-.dropdown a:hover {background-color: #ddd;}
+.dropdown-content a {
+  color: black;
+  /* padding: 12px 16px; */
+  text-decoration: none;
+  display: block;
+}
 
-.show {display: block;}
+.dropdown-content a:hover {
+  background-color: lightgrey;
+}
 
+.show {
+  display: block;
+}
 
 /* Slideshow container  + modal box*/
 
-.category-box{
-    position: relative;
-    border-radius: 8px;
-    background: #44D795;
-    width: 93%;
-    margin: 10px;
-    height: 130px;
-}
-.myBtn{
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    font-size: large;
+.category-box {
+  position: relative;
+  border-radius: 8px;
+  background: #44D795;
+  width: 93%;
+  margin: 10px;
+  height: 130px;
 }
 
-.show-all{
+.myBtn {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: large;
+}
+
+.show-all {
   position: absolute;
   top: 10px;
   left: 40px;
 }
-  /* Slides */
-  .category-cell {
-    display: none;
-    position: relative;
-    top: 40px;
-    float:left;
-    background-color:white;
-    border-radius: 10px;
-    margin-top: 8px;
-    margin-left: 25px;
-    width: 120px;
-    text-align: center;
-    
-  }
 
-  .category-cell a{
-    padding-left: 15px;
-    padding-right:15px;
-    border-radius: 10px;
-    font-size: large;
-    text-align: center;
-  }
-  
-  .category-cell .category-delete{
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    top: 2px;
-    right: 2px;
-  }
-  /* Next & previous buttons */
-  .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    bottom: 5px;
-    width: auto;
-    /* margin-top: -30px; */
-    padding: 10px;
-    color: #888;
-    font-weight: bold;
-    font-size: 10px;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
-  
-  /* Position the "next button" to the right */
-  .next {
-    position: absolute;
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  .prev{
-    position: absolute;
-    left: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
-    background-color: green;
-    color: white;
-  }
-  
-  /* The dot/bullet/indicator container */
-  .dot-container {
-    position: absolute;
-    text-align: center;
-    background:#44D795;
-    bottom: 0;
-    left: 43%;
-  }
-  
-  /* The dots/bullets/indicators */
-  .dot {
-    cursor: pointer;
-    height: 10px;
-    width: 10px;
-    margin: 0 2px;
-    background-color: darkgrey;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  
-  /* Add a background color to the active dot/circle */
-  .active, .dot:hover {
-    background-color: black;
-  }
-  
-  /* Add an italic font style to all quotes */
-  q {font-style: italic;}
-  
-  /* Add a blue color to the author */
-  .author {color: cornflowerblue;}
+/* Slides */
 
-  /*all the modal stuffs */
+.category-cell {
+  display: none;
+  position: relative;
+  top: 40px;
+  float: left;
+  background-color: white;
+  border-radius: 10px;
+  margin-top: 8px;
+  margin-left: 25px;
+  width: 120px;
+  text-align: center;
+}
 
-.fa-plus-square{
+.category-cell a {
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 10px;
+  font-size: large;
+  text-align: center;
+}
+
+.category-cell .category-delete {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 2px;
+  right: 2px;
+}
+
+/* Next & previous buttons */
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  bottom: 5px;
+  width: auto;
+  /* margin-top: -30px; */
+  padding: 10px;
+  color: #888;
+  font-weight: bold;
+  font-size: 10px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+
+.next {
+  position: absolute;
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev {
+  position: absolute;
+  left: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+
+.prev:hover, .next:hover {
+  background-color: green;
+  color: white;
+}
+
+/* The dot/bullet/indicator container */
+
+.dot-container {
+  position: absolute;
+  text-align: center;
+  background: #44D795;
+  bottom: 0;
+  left: 43%;
+}
+
+/* The dots/bullets/indicators */
+
+.dot {
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  margin: 0 2px;
+  background-color: darkgrey;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+/* Add a background color to the active dot/circle */
+
+.active, .dot:hover {
+  background-color: black;
+}
+
+/* Add an italic font style to all quotes */
+
+q {
+  font-style: italic;
+}
+
+/* Add a blue color to the author */
+
+.author {
+  color: cornflowerblue;
+}
+
+/*all the modal stuffs */
+
+.fa-plus-square {
   font-size: large;
   position: absolute;
   right: 5px;
   bottom: 5px;
 }
+
 .modal {
   display: none;
   /* Hidden by default */
@@ -298,23 +318,23 @@ input[type=checkbox]:checked + label:before{
 
 @-webkit-keyframes animatetop {
   from {
-      top: -300px;
-      opacity: 0
+    top: -300px;
+    opacity: 0
   }
   to {
-      top: 0;
-      opacity: 1
+    top: 0;
+    opacity: 1
   }
 }
 
 @keyframes animatetop {
   from {
-      top: -300px;
-      opacity: 0
+    top: -300px;
+    opacity: 0
   }
   to {
-      top: 0;
-      opacity: 1
+    top: 0;
+    opacity: 1
   }
 }
 
@@ -323,7 +343,7 @@ input[type=checkbox]:checked + label:before{
 .close {
   color: white;
   float: right;
-  font-size: 28px;
+  font-size: 40px;
   font-weight: bold;
 }
 
@@ -347,8 +367,7 @@ input[type=checkbox]:checked + label:before{
   font-weight: bold;
 }
 
-
-.modal-body #submit{
+.modal-body #submit {
   position: absolute;
   right: 8;
 }
@@ -356,12 +375,14 @@ input[type=checkbox]:checked + label:before{
 /*end of modal and category box*/
 
 /*css for category list*/
-.box{
+
+.box {
   position: relative;
   width: 93%;
   margin: 10px;
 }
-.box h2{
+
+.box h2 {
   float: left;
   margin-right: 10px;
 }
@@ -372,10 +393,9 @@ input[type=checkbox]:checked + label:before{
   display: none;
 }
 
-.category-list input:checked ~ ul {
+.category-list input:checked~ul {
   display: block;
 }
-
 
 /*Arrow*/
 
@@ -387,19 +407,23 @@ input[type=checkbox]:checked + label:before{
   z-index: 0;
   margin: 17px 1em 0 2em;
 }
-.category-list input + .arrow {
+
+.category-list input+.arrow {
   transform: rotate(-90deg);
   transition: 0.1s;
 }
-.category-list input:checked + .arrow {
+
+.category-list input:checked+.arrow {
   transform: rotate(0deg);
   transition: 0.1s;
 }
 
 /*Styles*/
+
 .category-list label:hover {
   cursor: pointer;
 }
+
 .category-list label {
   width: 100%;
   display: block;
@@ -421,11 +445,14 @@ input[type=checkbox]:checked + label:before{
 .category-list ul {
   float: left;
   padding: 0 0.25em;
+  margin-bottom: 20px;
   margin-left: 30px;
 }
-.category-list ul li{
+
+.category-list ul li {
   position: relative;
   width: 200px;
+  height: 30px;
 }
 
 .category-list li a {
@@ -440,7 +467,7 @@ input[type=checkbox]:checked + label:before{
 
 .cat-list li button {
   position: absolute;
-  right:0px;
+  right: 0px;
   margin-top: 15px;
   border: none;
   font-size: small;
