First commit for Esther changes

--- a/Blueprint/category.css
+++ b/Blueprint/category.css
@@ -1,38 +1,55 @@
 .garage-logo {
     position: absolute;
     left: 20px;
-    top: 20px;
+    top: 27px;
     width: 100px;
     height: auto;
-}
-
-.section {
+  }
+  
+  .guest-icon {
+    position: absolute;
+    left: 300px;
+    top: 25px;
+    width: 40px;
+    height: auto;
+  }
+  
+  .section{
     table-layout: fixed;
     border-collapse: collapse;
-    width: 93%;
+    width: 90%;
     margin: 10px;
     margin-top: 70px;
-}
-
-.section .button {
-    background-color: black;
+    float: center;
+  } 
+  
+  .section .button{
+    background-color: #C8C8C8; 
     color: white;
-    font-size: 15px;
+    font-size: 14px;
+    font-weight: lighter;
     text-align: center;
-    line-height: 30px;
     border-radius: 8px;
+    line-height: 28px;
     float: left;
-    width: 100%;
+    width: 95%;
     height: 30px;
-}
-
-.section .button .menu_image {
-    width: 30px;
-    height: 30px;
-}
+  }
+  
+  img {
+    position: center;
+    width: 25px;
+    height: 25px;
+    margin-top: 2px;
+  }
+  
+  .section .button .menu_image{
+    width: 25px;
+    height: 25px;
+  }  
 
 #my-folder {
-    background-color: #2F4F4F;
+    background-color: #828282;
 }
 
 
@@ -52,7 +69,7 @@
 /*all the modal stuffs */
 
 .fa-plus-square{
-    font-size: large;
+    font-size: normal;
     position: absolute;
     right: 5px;
     bottom: 5px;
@@ -162,7 +179,7 @@
     font-weight: bolder;
     font-size: large;
     color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Calibri, sans-serif;
 }
 
 .categories .catContainer{
