--- a/Blueprint/home.css
+++ b/Blueprint/home.css
@@ -11,8 +11,16 @@
   .garage-logo {
     position: absolute;
     left: 20px;
-    top: 20px;
+    top: 30px;
     width: 100px;
+    height: auto;
+}
+
+.guest-icon {
+    position: absolute;
+    left: 300px;
+    top: 28px;
+    width: 40px;
     height: auto;
 }
 
@@ -21,69 +29,88 @@
     border-collapse: collapse;
     width: 90%;
     margin: 10px;
-    margin-top: 70px;
+    margin-top: 85px;
+    float: center;
 } 
 
 .section .button{
-    background-color:black; 
-    color: black;
-    font-size: 15px;
+    background-color: #C8C8C8; 
+    color: white;
+    font-size: 14px;
+    font-weight: lighter;
     text-align: center;
-    line-height: 30px;
     border-radius: 8px;
+    line-height: 28px;
     float: left;
-    width: 100%;
+    width: 95%;
     height: 30px;
+    box-shadow: 0.5px 0.5px 1px 1px lightgrey;
 }
 
-.section .button .menu_image{
-    width: 30px;
-    height: 30px;
+
+img {
+    position: center;
+    width: 25px;
+    height: 25px;
+    margin-top: 2px;
 }
+
 #search{
-    background-color: #2F4F4F;
+    background-color: #828282	;
 }
 
 
 
 .search-box{
     background-color: #44D795;
-    width: 300px;
+    box-sizing: border-box;
+    box-shadow: 1px 1px 2px 2px lightgrey;
+    width: 315px;
     padding: 10px;
-    height: 150px;
+    padding-right: 10px;
+    height: 105px;
     margin: 10px;
-    border-radius: 15px;
+    margin-top: 15px;
+     border-radius: 15px;
+    float: center;
+
 }
 
 .search-box h2{
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: calibri, sans-serif;
     font-weight: bold;
     color: white;
-    font-size: 15px;
+    font-size: 12px;
+    letter-spacing: 0.5px;
+
 }
 
 .search-box .search-txt{
     padding: 10px;
-    font-size: 15px;
+    font-size: 13px;
+    font-weight: lighter;
     border: 1px solid grey;
     float: left;
     width: 90%;
+    padding-left: 14px;
     background: white;
     border-radius: 10px;
 }
 
 .search-box .search-btn{
     position: absolute;
-    left:270px;
-    top: 178px;
+    left:292px;
+    top: 194px;
 
 }
 
 .tab-container{
     width: 90%;
     margin: 10px;
+    margin-top: 17px;
     height:200px;
+   
 }
 
 .tab-container .button-container{
@@ -93,16 +120,19 @@
 
 .tab-container .button-container button{
     width: 50%;
-    height: 100%;
+    height: 95%;
     color: white;
     float: left;
-    border: none;
-    outline: none;
+    border-radius: 0px;
+    line-height: 10px;
     cursor: pointer;
     padding: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: calibri, sans-serif;
     font-size: 11px;
+    font-weight: lighter;
+    letter-spacing: 0.5px;
     background-color: lightgrey;
+    box-shadow: 0.5px 0.5px 1px 1px lightgrey;
 }
 
 .tab-container .button-container button:hover{
@@ -112,11 +142,25 @@
 .tab-container .tab-panel{
     height: 90%;
     background-color: lightgrey ;
-    color: white;
-    text-align: center;
+    color: black;
+    text-align: left; 
+    padding-left: 20px;
+    padding-right: 20px;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 10px;
+    box-shadow: 1px 1px 2px 2px lightgrey;
+    border-radius: 5px;
+    font-family: calibri, sans-serif;
+    font-size: 12px;
+    font-weight: lighter;
+    letter-spacing: 0.5px;
     display: none;
 }
 
+.defination h2{
+    text-align: center; 
+    font-family: calibri, sans-serif;
+    font-size: 13px;
+    font-weight: lighter;
+    letter-spacing: 0.5px;
+    padding-top: 10px;
+}
