added the extra images and the title changes accordingly

--- a/Blueprint/checklist.css
+++ b/Blueprint/checklist.css
@@ -392,6 +392,10 @@ q {
   font-weight: bold;
 }
 
+.modal-body #fname{
+  width: 140px;
+}
+
 .modal-body #submit {
   position: absolute;
   right: 8;
