--- a/Blueprint/relatedNews.css
+++ b/Blueprint/relatedNews.css
@@ -43,6 +43,25 @@ img {
   margin-top: 2px;
 }
 
+.button .tooltiptext {
+  visibility: hidden;
+  width: 60px;
+  height: 20px;
+  background-color: #F2F3F4;
+  color: black;
+  text-align: center;
+  /* border-radius: 6px; */
+  padding-bottom: 5px;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.button:hover .tooltiptext {
+  visibility: visible;
+}
+
 .section .button .menu_image{
   width: 25px;
   height: 25px;
