--- a/Blueprint/checklist.css
+++ b/Blueprint/checklist.css
@@ -427,8 +427,17 @@ q {
 
 .box {
   position: relative;
-  width: 93%;
+  width: 50%;
   margin: 10px;
+  margin-left: 12px;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: whitesmoke;
+  width: 130px;
+  height: 20px;
+  background-color: whitesmoke;
+
 }
 
 .box h2 {
@@ -454,7 +463,7 @@ q {
   vertical-align: middle;
   float: left;
   z-index: 0;
-  margin: 17px 1em 0 2em;
+  margin: 3px 1em 0 1em;
 }
 
 .category-list input+.arrow {
@@ -476,14 +485,15 @@ q {
 }
 
 .category-list label {
-  width: 10%;
+  width: 100%;
+  height: 100%;
   display: block;
   z-index: 3;
   position: relative;
 }
 
 .category-list ul, .category-list li, .category-list label {
-  line-height: 50px;
+  line-height: 18px;
   margin: 0;
   /* padding: 0 2em; */
   list-style: none;
