--- a/Blueprint/checklist.css
+++ b/Blueprint/checklist.css
@@ -43,28 +43,28 @@ img {
   margin-top: 2px;
 }
 
-.button .tooltiptext {
-  visibility: hidden;
-  width: 60px;
-  height: 20px;
-  background-color: #F2F3F4;
-  color: black;
-  text-align: center;
-  /* border-radius: 6px; */
-  padding-bottom: 5px;
-
-  /* Position the tooltip */
-  position: absolute;
-  z-index: 1;
+.section .button .img-top {
+  display: none;
+  position: center;
+}
+.section .button:hover .img-top {
+  display: inline;
 }
 
-.button:hover .tooltiptext {
-  visibility: visible;
+.section .button:hover img {
+  display: none;
 }
 
 .section .button .menu_image{
   width: 25px;
   height: 25px;
+}
+
+.img-top {
+  text-align: center; 
+  font-family: calibri, sans-serif;
+  font-size: 13px;
+  letter-spacing: 0.5px;
 }
 
 #checklist {
