--- a/Blueprint/home.css
+++ b/Blueprint/home.css
@@ -71,6 +71,13 @@ img {
     display: none;
 }
 
+.img-top {
+    text-align: center; 
+    font-family: calibri, sans-serif;
+    font-size: 13px;
+    letter-spacing: 0.5px;
+}
+
 
 
 
@@ -185,3 +192,4 @@ img {
     letter-spacing: 0.5px;
     padding-top: 10px;
 }
+
